--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
         <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3>email</h3>
-            <p>jsambuka@yahoo.com</p>
+            <p>dnstev@gmail.com</p>
         </div>
 
         <div class="icons">
